--- a/RESTInventoryTracker/src/main/resources/static/css/main.css
+++ b/RESTInventoryTracker/src/main/resources/static/css/main.css
@@ -2,8 +2,7 @@ body {
 	background-color: antiquewhite;
 }
 
-/* Custom CSS to adjust table width */
 .table-responsive table {
-    width: 50%; /* Set table width to 100% of its container */
-    max-width: 100%; /* Ensure table does not exceed the width of its container */
+    width: 50%;
+    max-width: 100%;
 }
