--- a/ngInventoryTracker/src/app/app.component.html
+++ b/ngInventoryTracker/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div>
+  This is my Angular frond end. <a href="indexStatic.html">View my JavaScript/AJAX front end</a>
+</div>
+
 <div class="container">
 <app-home></app-home>
 </div>
